Fixed static margins on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   display: grid;
   justify-content: center;
   align-content: center;
-  margin: 0 200px 300px;
+  margin: 0 10% 15%;
   font-size: 1.5em;
 
 }
